added authorization header to routes in swagger documentation
